- switch to Jakarta API - warning cleanup